refactor mainwindow.fxml